--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -6,5 +6,9 @@ body{
 	font-family: "Arial Black", Gadget, sans-serif;
 }
 .Interests{
-list-style: none;
+	list-style: none;
+}
+#ul{
+	font-size: 20px;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
