--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -5,10 +5,16 @@ body{
 	text-align: center;
 	font-family: "Arial Black", Gadget, sans-serif;
 }
-.Interests{
+.list{
 	list-style: none;
+	position: relative;
+	margin-left: 1110px;
+	bottom: 15px;
 }
-#ul{
+#Interests{
 	font-size: 20px;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	position: relative;
+	margin-left: 1120px;
+	bottom: ;
 }
