--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -18,3 +18,16 @@ body{
 	margin-left: 1120px;
 	bottom: ;
 }
+#Skills{
+	font-size: 20px;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	position: relative;
+	margin-left: 1120px;
+	bottom: ;
+}
+.Tech{
+	list-style: none;
+	position: relative;
+	margin-left: 1110px;
+	bottom: 15px;
+}
