--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -51,3 +51,21 @@ body{
 	margin-left: 15px;
 	bottom: 350px;
 }
+.JSS{
+	list-style: square;
+	position: relative;
+	margin-left: -1px;
+	bottom: 361px;	
+	}
+.MMP{
+	list-style: square;
+	position: relative;
+	margin-left: -1px;
+	bottom: 361px;	
+}
+.SDA{
+	list-style: square;
+	position: relative;
+	margin-left: -1px;
+	bottom: 361px;
+	}
