--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -55,13 +55,13 @@ body{
 	list-style: square;
 	position: relative;
 	margin-left: -1px;
-	bottom: 361px;	
+	bottom: 361px;
 	}
 .MMP{
 	list-style: square;
 	position: relative;
 	margin-left: -1px;
-	bottom: 361px;	
+	bottom: 361px;
 }
 .SDA{
 	list-style: square;
@@ -69,12 +69,19 @@ body{
 	margin-left: -1px;
 	bottom: 361px;
 }
-.Lingo{
+.foot{
+	text-align: center;
+}
+#Lingo{
+	font-size: 20px;
+	font-family: "Trebuchet MS", Helvetica, sans-serif;
+	position: relative;
+	margin-left: 1120px;
+	bottom: 420px;
+}
+.lang{
 	list-style: none;
 	position: relative;
 	margin-left: 1110px;
-	bottom: 400px;
-}
-.foot{
-	text-align: center;
+	bottom: 430px;
 }
