--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -36,21 +36,15 @@ p{
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	position: relative;
 	margin-left: 1120px;
-	bottom: ;
+	bottom: 20px;
 }
 .Tech{
 	list-style: none;
 	position: relative;
 	margin-left: 1110px;
-	bottom: 15px;
+	bottom: 30px;
 }
-#Skills{
-	font-size: 20px;
-	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	position: relative;
-	margin-left: 1120px;
-	bottom: ;
-}
+
 .Learn{
 	list-style: square;
 	position: relative;
@@ -98,3 +92,4 @@ p{
 	margin-left: 1110px;
 	bottom: 600px;
 }
+@media only screen and (max-width:632px)
