--- a/Css/Bio.css
+++ b/Css/Bio.css
@@ -1,6 +1,6 @@
 body{
-	background: url("Images/daniel-leone-185834.jpg");
-    background-size: cover;
+	background: url("https://static1.squarespace.com/static/56e72fc07c65e47c25d0cf78/t/5952e019099c01936393458e/1498603553533/daniel-leone-185834.jpg?format=2500w");
+    	background-size: cover;
 	width: 100%;
 }
 #about_me{
